b/319014043 Fix code analysis nits (#292)